style/portfolio.css
:root {
  --primary-color: #1c7293;
  --secondary-color: #e1f6f4;
  --secondary-text-color: #272142;
}

h1,
h2,
h4 {
  font-family: "Playfair Display", serif;
  font-weight: 700;
}

p,
a,
h3 {
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-size: 18px;
}

h2 {
  font-size: 64px;
}

h4 {
  font-size: 48px;
}

nav {
  padding: 20px 0;
}

nav p a {
  font-family: "Playfair Display", serif;
  font-size: 20px;
  color: var(--secondary-text-color);
}

nav li {
  list-style: none;
  display: inline;
  margin-left: 20px;
  line-height: 40px;
}

nav a {
  text-decoration: none;
  font-size: 16px;
  color: var(--secondary-text-color);
}

.color-nav {
  background: var(--secondary-color);
}

nav a:hover {
  color: var(--primary-color);
  transition: all 100ms ease-in-out;
}

.active {
  color: var(--primary-color);
}

.hero {
  text-align: center;
  background: var(--secondary-color);
  padding: 100px 20px;
}

.hero h1 {
  font-size: 96px;
}

.hero h2 {
  font-size: 24px;
  line-height: 2;
  color: var(--secondary-text-color);
  font-family: "Poppins", sans-serif;
  font-weight: 500;
}

.content-container {
  padding: 70px 20px;
}

.content-container h1 {
  font-size: 64px;
  line-height: 72px;
}

.content-container h2 {
  font-size: 22px;
}

.content-container h3 {
  font-size: 24px;
  font-weight: bold;
}

.content-container p {
  font-size: 14px;
}

.content {
  margin: 60px 30px;
}

.content p {
  font-size: 20px;
}

.contact-container {
  background: var(--secondary-color);
  border-radius: 4px;
  padding: 40px 80px;
}

.contact-container a {
  color: var(--primary-color);
  text-decoration: none;
}

.contact-container a:hover {
  text-decoration: underline;
}

.transform-img {
  transition: all 200ms ease-in-out;
}

.transform-img:hover {
  transform: scale(1.1);
  filter: contrast(60%);
}

.btn-block {
  text-decoration: none;
  color: white;
  font-size: 18px;
  background: var(--primary-color);
  border-radius: 4px;
  padding: 18px 30px;
}

.btn-outline {
  text-decoration: none;
  color: var(--primary-color);
  border: 1px solid var(--primary-color);
  font-size: 16px;
  border-radius: 4px;
  padding: 18px 30px;
}

.project-details p {
  font-size: 16px;
  color: var(--secondary-text-color);
  line-height: 30px;
}

.project-details {
  padding: 120px 60px;
}

footer {
  margin: 60px 0;
}

footer .contact-container a {
  color: white;
}

footer .contact-container a:hover {
  text-decoration: none;
}

footer .email-link {
  text-decoration: none;
  color: black;
  font-size: 24px;
}

footer .email-link:hover {
  color: var(--primary-color);
}

footer .social-links a {
  color: var(--primary-color);
  background: var(--secondary-color);
  margin: 0 20px;
  padding: 10px 14px;
  border-radius: 50%;
}

footer .social-links a:hover {
  color: white;
  background: var(--primary-color);
  transition: all 100ms ease-in-out;
}

.footer-gh {
  text-decoration: none;
  color: var(--primary-color);
}

.footer-gh:hover {
  text-decoration: underline;
}

@media (max-width: 900px) {
  h1 {
    font-size: 38px;
  }

  .hero h2 {
    font-size: 18px;
  }

  .hero {
    padding: 80px 20px;
  }

  .project-details,
  .content-container {
    padding: 0;
    text-align: center;
  }

  .project-details h2 {
    font-size: 36px;
  }

  nav p {
    font-size: 18px;
  }

  nav a {
    font-size: 14px;
  }
}

